--- a/Flaintartist/Base.lproj/Main.storyboard
+++ b/Flaintartist/Base.lproj/Main.storyboard
@@ -671,11 +671,11 @@
                         <viewControllerLayoutGuide type="bottom" id="dZn-Yo-l0S"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="hl9-fH-IbR">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="1400"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="670"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" dataMode="prototypes" style="grouped" separatorStyle="none" allowsSelection="NO" rowHeight="270" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="ZPZ-Jt-gun">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="1400"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="670"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ModernTabCell" id="vFu-1Z-erx" customClass="ModernTabCell" customModule="Flaintartist" customModuleProvider="target">
@@ -932,9 +932,13 @@
                             <constraint firstAttribute="trailing" secondItem="ZPZ-Jt-gun" secondAttribute="trailing" id="ey6-hS-2tR"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Explore" id="UsF-WI-4Cf"/>
+                    <navigationItem key="navigationItem" title="Explore" id="UsF-WI-4Cf">
+                        <barButtonItem key="rightBarButtonItem" style="done" systemItem="search" id="FVs-Pv-sXP">
+                            <color key="tintColor" red="0.12637259066104889" green="0.12639245390892029" blue="0.12636536359786987" alpha="1" colorSpace="calibratedRGB"/>
+                        </barButtonItem>
+                    </navigationItem>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-                    <size key="freeformSize" width="375" height="1400"/>
+                    <size key="freeformSize" width="375" height="670"/>
                     <connections>
                         <outlet property="tableView" destination="ZPZ-Jt-gun" id="EtC-ue-UfS"/>
                         <segue destination="EVe-GM-6zn" kind="show" identifier="ArtRoomVC" id="lm1-1w-gIw"/>
@@ -943,7 +947,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WoW-59-nXf" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1983.2" y="-990.40479760119945"/>
+            <point key="canvasLocation" x="590" y="-611"/>
         </scene>
         <!--Explore-->
         <scene sceneID="nOI-wH-bfm">
@@ -996,7 +1000,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PjO-Hy-rUL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="590" y="305"/>
+            <point key="canvasLocation" x="590" y="139"/>
         </scene>
         <!--Art RoomVC-->
         <scene sceneID="GuF-Mx-T2a">
@@ -1017,7 +1021,7 @@
                                         <rect key="frame" x="0.0" y="444" width="375" height="226"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kDa-u2-0hP">
-                                                <rect key="frame" x="8" y="-4" width="359" height="29"/>
+                                                <rect key="frame" x="8" y="0.0" width="359" height="29"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="29" id="Gd6-1N-xVM"/>
                                                 </constraints>
@@ -1026,7 +1030,7 @@
                                                 <color key="highlightedColor" red="0.90823972230000005" green="0.92638683320000004" blue="0.93171715740000005" alpha="1" colorSpace="calibratedRGB"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Type" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vxk-S9-Y3p">
-                                                <rect key="frame" x="67" y="42" width="240" height="21"/>
+                                                <rect key="frame" x="67" y="46" width="240" height="21"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="21" id="wMA-ik-b2q"/>
                                                 </constraints>
@@ -1035,7 +1039,7 @@
                                                 <color key="highlightedColor" red="0.90823972230000005" green="0.92638683320000004" blue="0.93171715740000005" alpha="1" colorSpace="calibratedRGB"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Size" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ShD-hZ-fQ3">
-                                                <rect key="frame" x="67" y="66" width="240" height="21"/>
+                                                <rect key="frame" x="67" y="70" width="240" height="21"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="21" id="0ZD-j0-Cpq"/>
                                                 </constraints>
@@ -1044,7 +1048,7 @@
                                                 <color key="highlightedColor" red="0.90823972230000005" green="0.92638683320000004" blue="0.93171715740000005" alpha="1" colorSpace="calibratedRGB"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="12" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gNv-9m-igw">
-                                                <rect key="frame" x="67" y="95" width="240" height="58"/>
+                                                <rect key="frame" x="67" y="99" width="240" height="58"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="58" id="GeN-9F-HZH"/>
                                                 </constraints>
@@ -1060,7 +1064,7 @@
                                                 <color key="highlightedColor" red="0.90823972230000005" green="0.92638683320000004" blue="0.93171715740000005" alpha="1" colorSpace="calibratedRGB"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mkm-7D-Tgb">
-                                                <rect key="frame" x="89" y="16" width="197" height="29"/>
+                                                <rect key="frame" x="89" y="20" width="197" height="29"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <state key="normal" title="Button">
                                                     <color key="titleColor" red="0.12637259070000001" green="0.12639245390000001" blue="0.1263653636" alpha="1" colorSpace="calibratedRGB"/>
@@ -1070,10 +1074,10 @@
                                                 </connections>
                                             </button>
                                         </subviews>
-                                        <color key="backgroundColor" white="1" alpha="0.64862478595890416" colorSpace="calibratedWhite"/>
+                                        <color key="backgroundColor" white="1" alpha="0.70192101883561653" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstItem="gNv-9m-igw" firstAttribute="top" secondItem="ShD-hZ-fQ3" secondAttribute="bottom" constant="8" id="B1W-OO-dov"/>
-                                            <constraint firstAttribute="bottom" secondItem="mkm-7D-Tgb" secondAttribute="bottom" constant="181" id="DXA-1q-8Rd"/>
+                                            <constraint firstAttribute="bottom" secondItem="mkm-7D-Tgb" secondAttribute="bottom" constant="177" id="DXA-1q-8Rd"/>
                                             <constraint firstItem="ShD-hZ-fQ3" firstAttribute="top" secondItem="Vxk-S9-Y3p" secondAttribute="bottom" constant="3" id="FON-fc-MtP"/>
                                             <constraint firstAttribute="height" constant="226" id="HNM-l3-HdO"/>
                                             <constraint firstItem="kDa-u2-0hP" firstAttribute="centerX" secondItem="mkm-7D-Tgb" secondAttribute="centerX" id="KN1-4N-8jC"/>
@@ -1086,7 +1090,7 @@
                                             <constraint firstItem="gNv-9m-igw" firstAttribute="leading" secondItem="ShD-hZ-fQ3" secondAttribute="leading" id="hhs-Zr-khB"/>
                                             <constraint firstItem="Vxk-S9-Y3p" firstAttribute="leading" secondItem="ShD-hZ-fQ3" secondAttribute="leading" id="iB0-5V-EEF"/>
                                             <constraint firstItem="Vxk-S9-Y3p" firstAttribute="leading" secondItem="AZr-Od-Hp9" secondAttribute="leading" constant="67" id="ksj-1p-jXU"/>
-                                            <constraint firstItem="kDa-u2-0hP" firstAttribute="top" secondItem="AZr-Od-Hp9" secondAttribute="top" constant="-4" id="pgo-TV-8gq"/>
+                                            <constraint firstItem="kDa-u2-0hP" firstAttribute="top" secondItem="AZr-Od-Hp9" secondAttribute="top" id="pgo-TV-8gq"/>
                                             <constraint firstItem="mkm-7D-Tgb" firstAttribute="centerX" secondItem="AZr-Od-Hp9" secondAttribute="centerX" id="pyM-cc-YIG"/>
                                         </constraints>
                                     </view>
@@ -1271,7 +1275,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VmK-vG-9tI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1558" y="-587"/>
+            <point key="canvasLocation" x="1361" y="-612"/>
         </scene>
         <!--GalleryVC-->
         <scene sceneID="erT-7V-RXy">
@@ -1421,7 +1425,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="27j-OT-pU7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1973.5999999999999" y="-1435.6821589205399"/>
+            <point key="canvasLocation" x="2142" y="-1435"/>
         </scene>
         <!--Gallery-->
         <scene sceneID="Ukg-XM-X7D">
@@ -1557,7 +1561,7 @@
                                         </subviews>
                                     </stackView>
                                 </subviews>
-                                <color key="backgroundColor" red="0.90823972230000005" green="0.92638683320000004" blue="0.93171715740000005" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="hKe-2p-nYQ" secondAttribute="trailing" id="0C9-5k-yis"/>
                                     <constraint firstItem="hKe-2p-nYQ" firstAttribute="top" secondItem="6Fd-us-f1b" secondAttribute="bottom" constant="65" id="0Sp-82-BHO"/>
@@ -2322,7 +2326,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Flc-Pd-Xdy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3134" y="-586"/>
+            <point key="canvasLocation" x="3938" y="-1439"/>
         </scene>
         <!--PrivacyVC-->
         <scene sceneID="A3I-LF-J0j">
@@ -2374,7 +2378,56 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gO6-Dm-bCU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2421.5999999999999" y="-586.05697151424295"/>
+            <point key="canvasLocation" x="3134" y="-1439"/>
+        </scene>
+        <!--WebVC-->
+        <scene sceneID="H2w-2l-Did">
+            <objects>
+                <viewController storyboardIdentifier="WebVC" id="cQn-AC-0AH" customClass="WebVC" customModule="Flaintartist" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Nam-Jj-SrC"/>
+                        <viewControllerLayoutGuide type="bottom" id="KnQ-Pb-FD7"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="htd-zP-TDE">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gun-3D-Lat">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <dataDetectorType key="dataDetectorTypes" link="YES"/>
+                            </webView>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gS0-ou-fJg">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem id="pzf-Cc-zSd">
+                                        <barButtonItem key="leftBarButtonItem" image="Dismiss-30" id="j5b-Fq-XBX">
+                                            <color key="tintColor" red="0.12637259066104889" green="0.12639245390892029" blue="0.12636536359786987" alpha="1" colorSpace="calibratedRGB"/>
+                                            <connections>
+                                                <action selector="cancelBtnTapped:" destination="cQn-AC-0AH" id="Dvh-qc-bAM"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Gun-3D-Lat" firstAttribute="top" secondItem="htd-zP-TDE" secondAttribute="top" constant="64" id="4aJ-iU-Qf9"/>
+                            <constraint firstAttribute="bottom" secondItem="Gun-3D-Lat" secondAttribute="bottom" id="T2b-N5-bP6"/>
+                            <constraint firstItem="Gun-3D-Lat" firstAttribute="leading" secondItem="htd-zP-TDE" secondAttribute="leading" id="Vpc-ro-hzl"/>
+                            <constraint firstAttribute="trailing" secondItem="Gun-3D-Lat" secondAttribute="trailing" id="gue-Il-W2j"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="bar" destination="gS0-ou-fJg" id="hpa-Ff-IkD"/>
+                        <outlet property="webView" destination="Gun-3D-Lat" id="na0-X5-lQb"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2uZ-r6-owU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3133.5999999999999" y="-610.34482758620697"/>
         </scene>
     </scenes>
     <resources>
