--- a/Flaintartist/Base.lproj/Main.storyboard
+++ b/Flaintartist/Base.lproj/Main.storyboard
@@ -932,11 +932,7 @@
                             <constraint firstAttribute="trailing" secondItem="ZPZ-Jt-gun" secondAttribute="trailing" id="ey6-hS-2tR"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Explore" id="UsF-WI-4Cf">
-                        <barButtonItem key="rightBarButtonItem" style="done" systemItem="search" id="FVs-Pv-sXP">
-                            <color key="tintColor" red="0.12637259066104889" green="0.12639245390892029" blue="0.12636536359786987" alpha="1" colorSpace="calibratedRGB"/>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="Explore" id="UsF-WI-4Cf"/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="375" height="670"/>
                     <connections>
